; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_writehword_indexed.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_writehword_indexed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"movw %%%s,%x+%%%s\0A\00", align 1
@regname = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_writehword_indexed(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i64*, i64** @regname, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i64, i64* %7, i64 %9
  %11 = load i64, i64* %10, align 8
  %12 = add nsw i64 %11, 1
  %13 = load i32, i32* %5, align 4
  %14 = load i64*, i64** @regname, align 8
  %15 = load i32, i32* %6, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i64, i64* %14, i64 %16
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @assem_debug(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i64 %12, i32 %13, i64 %18)
  %20 = call i32 @output_byte(i32 102)
  %21 = call i32 @output_byte(i32 137)
  %22 = load i32, i32* %5, align 4
  %23 = icmp slt i32 %22, 128
  br i1 %23, label %24, label %33

24:                                               ; preds = %3
  %25 = load i32, i32* %5, align 4
  %26 = icmp sge i32 %25, -128
  br i1 %26, label %27, label %33

27:                                               ; preds = %24
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @output_modrm(i32 1, i32 %28, i32 %29)
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @output_byte(i32 %31)
  br label %39

33:                                               ; preds = %24, %3
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %4, align 4
  %36 = call i32 @output_modrm(i32 2, i32 %34, i32 %35)
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @output_w32(i32 %37)
  br label %39

39:                                               ; preds = %33, %27
  ret void
}

declare dso_local i32 @assem_debug(i8*, i64, i32, i64) #1

declare dso_local i32 @output_byte(i32) #1

declare dso_local i32 @output_modrm(i32, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
